feat: cleanup frontend and added some endpoints'
